tests/fixtures/negative/path_assigned_twice.wrela
// expect: SEM0038: driver path is assigned to more than one executor
module negative.path_assigned_twice

driver path SerialWritePath {}

executor A {
    serial_path: SerialWritePath

    start fn run(self) -> never {
        while true {}
    }
}

executor B {
    serial_path: SerialWritePath

    start fn run(self) -> never {
        while true {}
    }
}

image Bad {
    transitions { delegated_hardware -> owned_hardware }

    phase delegated_hardware(hardware: DelegatedHardware) -> OwnedHardware {
        return hardware.exit_to_owned_hardware()
    }

    phase owned_hardware(hardware: OwnedHardware) -> never {
        let serial_path = SerialWritePath()
        let a = A(serial_path = serial_path)
        let b = B(serial_path = serial_path)
        while true {}
    }
}
